ec2_template.yaml
  AWSTemplateFormatVersion: "2010-09-09"
  Description: "CloudFormation template to create an EC2 instance with associated resources"

  # aws cloudformation --stack-name StravaTemplatesStack --template-file ec2_template_new.yaml --capabilities CAPABILITY_NAMED_IAM
  # aws cloudformation delete-stack --stack-name StravaTemplatesStack

  Resources:
    StravaTemplatesVPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 10.0.0.0/24
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
          - Key: Name
            Value: StravaTemplatesVPC

    StravaTemplatesInternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: StravaTemplatesInternetGateway

    StravaTemplatesVPCGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        InternetGatewayId: !Ref StravaTemplatesInternetGateway

    PrivateStravaTemplatesEC2Subnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        CidrBlock: 10.0.0.96/28
        AvailabilityZone: eu-north-1a
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: PrivateStravaTemplatesEC2Subnet

    StravaTemplatesEC2Subnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        CidrBlock: 10.0.0.64/28
        AvailabilityZone: eu-north-1a
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: PublicStravaTemplatesEC2SubnetA

    StravaTemplatesEC2SubnetB:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        CidrBlock: 10.0.0.48/28
        AvailabilityZone: eu-north-1b
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: PublicStravaTemplatesEC2SubnetB

    StravaTemplatesEC2SubnetC:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        CidrBlock: 10.0.0.80/28
        AvailabilityZone: eu-north-1c
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: PublicStravaTemplatesEC2SubnetC

    StravaTemplatesRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        Tags:
          - Key: Name
            Value: StravaTemplatesRouteTable

    StravaTemplatesInternetRoute:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref StravaTemplatesRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref StravaTemplatesInternetGateway

    StravaTemplatesSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref StravaTemplatesEC2Subnet
        RouteTableId: !Ref StravaTemplatesRouteTable


    StravaTemplatesRDSSubnetA:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        CidrBlock: 10.0.0.16/28
        AvailabilityZone: eu-north-1a
        Tags:
          - Key: Name
            Value: StravaTemplatesRDSSubnetA

    StravaTemplatesRDSSubnetB:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref StravaTemplatesVPC
        CidrBlock: 10.0.0.32/28
        AvailabilityZone: eu-north-1b
        Tags:
          - Key: Name
            Value: StravaTemplatesRDSSubnetB

    StravaTemplatesDBSubnetGroup:
      Type: AWS::RDS::DBSubnetGroup
      Properties:
        DBSubnetGroupDescription: "Subnet group for RDS"
        SubnetIds:
          - !Ref StravaTemplatesRDSSubnetA
          - !Ref StravaTemplatesRDSSubnetB
        Tags:
          - Key: Name
            Value: StravaTemplatesDBSubnetGroup

    EC2SecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: "Allow EC2 access to RDS"
        VpcId: !Ref StravaTemplatesVPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 5432
            ToPort: 5432
            CidrIp: 10.0.0.0/24
          - IpProtocol: tcp
            FromPort: 8000
            ToPort: 8000
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 3000
            ToPort: 3000
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0

    RDSSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: "Allow RDS to be accessed by EC2"
        VpcId: !Ref StravaTemplatesVPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 5432
            ToPort: 5432
            CidrIp: 10.0.0.64/28

    StravaTemplatesEC2InstanceRole:
      Type: AWS::IAM::Role
      Properties:
        AssumeRolePolicyDocument:
          Version: "2012-10-17"
          Statement:
            - Effect: Allow
              Principal:
                Service: ec2.amazonaws.com
              Action: sts:AssumeRole
        Policies:
          - PolicyName: AllowSESSendingEmails
            PolicyDocument:
              Version: "2012-10-17"
              Statement:
                - Effect: Allow
                  Action:
                    - ses:SendEmail
                    - ses:SendRawEmail
                  Resource: "*"

    StravaTemplatesEC2InstanceProfile:
      Type: AWS::IAM::InstanceProfile
      Properties:
        Roles:
          - !Ref StravaTemplatesEC2InstanceRole

    StravaTemplatesEC2Instance:
      Type: AWS::EC2::Instance
      Properties:
        InstanceType: t3.micro
        KeyName: "EC2 temp"
        ImageId: ami-0f12d24db5eaa6369
        SubnetId: !Ref StravaTemplatesEC2Subnet
        SecurityGroupIds:
          - !Ref EC2SecurityGroup
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeSize: 20
              VolumeType: gp3
        IamInstanceProfile: !Ref StravaTemplatesEC2InstanceProfile
        Tags:
          - Key: Name
            Value: StravaTemplatesEC2Instance

    StravaTemplatesRDSInstance:
      Type: AWS::RDS::DBInstance
      Properties:
        DBInstanceClass: db.t4g.micro
        AllocatedStorage: 20
        Engine: postgres
        EngineVersion: "16.3"
        MasterUsername: postgres # set via params
        MasterUserPassword: postgres # set via params
        DBName: strava_templates
        DBSubnetGroupName: !Ref StravaTemplatesDBSubnetGroup
        VPCSecurityGroups:
          - !Ref RDSSecurityGroup
        MultiAZ: false
        BackupRetentionPeriod: 7
        Tags:
          - Key: Name
            Value: StravaTemplatesRDSInstance


    ALB:
      Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
      Properties:
        Name: altfitx-alb
        Subnets:
          - !Ref StravaTemplatesEC2Subnet
          - !Ref StravaTemplatesEC2SubnetB
        SecurityGroups:
          - !Ref EC2SecurityGroup
        Scheme: 'internet-facing'
        LoadBalancerAttributes:
          - Key: idle_timeout.timeout_seconds
            Value: '60'
        Tags:
          - Key: Name
            Value: altfitx-alb

    ALBListener80:
        Type: 'AWS::ElasticLoadBalancingV2::Listener'
        Properties:
          DefaultActions:
            - Type: 'redirect'
              RedirectConfig:
                Protocol: 'HTTPS'
                Port: '443'
                Host: '#{host}'
                Path: '/#{path}'
                Query: '#{query}'
                StatusCode: 'HTTP_301'
          LoadBalancerArn: !Ref ALB
          Port: 80
          Protocol: 'HTTP'

    ALBTargetGroup8000:
        Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
        Properties:
          Name: altfitx-target-group-8000
          Port: 8000
          Protocol: 'HTTP'
          VpcId: !Ref StravaTemplatesVPC
          HealthCheckIntervalSeconds: 30
          HealthCheckPath: /
          HealthCheckTimeoutSeconds: 5
          HealthyThresholdCount: 3
          UnhealthyThresholdCount: 3
          Targets:
            - Id: !Ref StravaTemplatesEC2Instance
              Port: 8000

    ALBTargetGroup3000:
      Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
      Properties:
        Name: altfitx-target-group-3000
        Port: 3000
        Protocol: 'HTTP'
        VpcId: !Ref StravaTemplatesVPC
        HealthCheckIntervalSeconds: 30
        HealthCheckPath: /
        HealthCheckTimeoutSeconds: 5
        HealthyThresholdCount: 3
        UnhealthyThresholdCount: 3
        Targets:
          - Id: !Ref StravaTemplatesEC2Instance
            Port: 3000

    ALBListenerHTTPS:
      Type: 'AWS::ElasticLoadBalancingV2::Listener'
      Properties:
        DefaultActions:
          - Type: forward
            ForwardConfig:
              TargetGroups:
                - TargetGroupArn: !Ref ALBTargetGroup3000
                  Weight: 1
        LoadBalancerArn: !Ref ALB
        Port: 443
        Protocol: HTTPS
        SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
        Certificates:
          - CertificateArn: arn:aws:acm:eu-north-1:992235354036:certificate/2986ce82-e483-4c7c-b26e-c5224c1edd73

    AdditionalCertificates:
      Type: AWS::ElasticLoadBalancingV2::ListenerCertificate
      Properties:
        Certificates:
          - CertificateArn: arn:aws:acm:eu-north-1:992235354036:certificate/2986ce82-e483-4c7c-b26e-c5224c1edd73
          - CertificateArn: arn:aws:acm:eu-north-1:992235354036:certificate/e2257185-0747-4501-8a1a-c40bca2b12d2
        ListenerArn: !Ref ALBListenerHTTPS

    ALBListenerRuleApi:
      Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
      Properties:
        Actions:
          - Type: forward
            ForwardConfig:
              TargetGroups:
                - TargetGroupArn: !Ref ALBTargetGroup8000
                  Weight: 1
        Conditions:
          - Field: host-header
            HostHeaderConfig:
              Values:
                - api.altfitx.com
        ListenerArn: !Ref ALBListenerHTTPS
        Priority: 1

    ALBListenerRuleAltfitx:
      Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
      Properties:
        Actions:
          - Type: forward
            ForwardConfig:
              TargetGroups:
                - TargetGroupArn: !Ref ALBTargetGroup3000
                  Weight: 1
        Conditions:
          - Field: host-header
            HostHeaderConfig:
              Values:
                - altfitx.com
        ListenerArn: !Ref ALBListenerHTTPS
        Priority: 2

    ALBARecordA:
      Type: 'AWS::Route53::RecordSet'
      Properties:
        HostedZoneId: 'Z0885243165F94TUJLIUR'
        Name: altfitx.com
        Type: 'A'
        AliasTarget:
          DNSName: !GetAtt ALB.DNSName
          HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID

    ALBARecordB:
      Type: 'AWS::Route53::RecordSet'
      Properties:
        HostedZoneId: 'Z0885243165F94TUJLIUR'
        Name: api.altfitx.com
        Type: 'A'
        AliasTarget:
          DNSName: !GetAtt ALB.DNSName
          HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID

  Outputs:
    EC2SubnetId:
      Description: "Subnet ID for EC2"
      Value: !Ref StravaTemplatesEC2Subnet

    StravaTemplatesDBSubnetGroup:
      Description: "Subnet ID for RDS"
      Value: !Ref StravaTemplatesDBSubnetGroup

    VPCId:
      Description: "VPC ID"
      Value: !Ref StravaTemplatesVPC

    EC2InstanceId:
      Description: "Instance ID for EC2"
      Value: !Ref StravaTemplatesEC2Instance

    RDSInstanceEndpoint:
      Description: "Endpoint for RDS PostgreSQL"
      Value: !GetAtt StravaTemplatesRDSInstance.Endpoint.Address
